--- a/css/style-newdesign.css
+++ b/css/style-newdesign.css
@@ -308,6 +308,7 @@ h1.ballet-heading {
 
 .modalTagArea {
   display: flex;
+  flex-wrap: wrap;
   padding: 10px;
   width: 85%;
   margin: 0 auto;
@@ -321,6 +322,7 @@ h1.ballet-heading {
 }
 
 .modalLinkArea {
+  flex-wrap: wrap;
   padding: 10px;
   width: 85%;
   border-top: none;
@@ -333,33 +335,38 @@ h1.ballet-heading {
   margin: 5px;
 }
 
-/* .scroll {
- text-align: center;
- position: relative;
+.modalOverview,
+.modalDescription {
+  padding: 30px 0;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.scroll {
+  text-align: center;
+  position: relative;
 }
 
 .scroll::after {
- content: '';
- width: 2px;
- height: 20px;
- background-color: #666666;
+  content: '';
+  width: 2px;
+  height: 20px;
+  background-color: #666666;
 
- position: absolute;
- top: 100%;
- left: 50%;
- transform: translate(-50%);
-} */
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%);
+}
 
-.modalDescription1 {
-  padding: 30px 0 0 0;
+.modalDescriptionHeading {
+  padding: 20px 0 0 0;
   width: 90%;
   margin: 0 auto;
 }
 
-.modalDescription2 {
-  padding: 30px 0 0 0;
-  width: 90%;
-  margin: 0 auto;
+h4.modalDescriptionHeading:nth-of-type(1) {
+  padding: 100px 0 0 0;
 }
 
 #pageTop {
